# practicas-2025

./: .gitignore  LICENSE  README.md
baseDatos/subConsultas/: ejercicio_01.sql  ejerciciosSQL.sql
practicasBaseDatos/subConsultas/: ejercicio_01.sql
python/: crear_hash.py  ejercicio_01.py  ejercicio_02.py  ejercicio_03.py  pyproject.toml  sets_lists_tuples.py
